src/test/ui/const-generics/raw-ptr-const-param-deref.min.stderr
error: using raw pointers as const generic parameters is forbidden
  --> $DIR/raw-ptr-const-param-deref.rs:10:23
   |
LL | struct Const<const P: *const u32>;
   |                       ^^^^^^^^^^

error: using raw pointers as const generic parameters is forbidden
  --> $DIR/raw-ptr-const-param-deref.rs:12:15
   |
LL | impl<const P: *const u32> Const<P> {
   |               ^^^^^^^^^^

error: aborting due to 2 previous errors

